--- a/styles/main.scss
+++ b/styles/main.scss
@@ -12,12 +12,58 @@
   font-style: normal;
 }
 
+/*Colors SCSS*/
 $primarycolor: #003087;
 $secondarycolor: #fddf33;
 $whitecolor: #ffffff;
 $maintext: #000000;
 $colortext: #1b5ca1;
 
+/*Global styles*/
+*{
+  margin: 0;
+  padding: 0;
+}
+
 body{
-  background-color: $secondarycolor;
+  font-family: Muller, sans-serif;
+  font-weight: normal;
+  color: $maintext;
+  word-wrap: break-word;
+  overflow-x: hidden;
+  text-align: center;
+}
+
+a,
+a:hover{
+  text-decoration: none;
+
+}
+
+li{
+  list-style: none;
+}
+
+.wrapper{
+  max-width: 1162px;
+  margin: 0 auto;
+}
+
+.btn{
+  white-space: nowrap;
+  vertical-align: middle;
+  cursor: pointer;
+  user-select: none;
+  background-repeat: no-repeat;
+  text-transform: none;
+  overflow: visible;
+  border: none;
+}
+
+.btn:focus{
+  outline-style: none;
+}
+
+.btn--primary{
+  
 }
