--- a/styles/main.scss
+++ b/styles/main.scss
@@ -18,6 +18,7 @@ $secondarycolor: #fddf33;
 $whitecolor: #ffffff;
 $maintext: #000000;
 $colortext: #1b5ca1;
+$shadowcolor: rgba(0, 0, 0, 0.2);
 
 /*Global styles*/
 *{
@@ -26,12 +27,13 @@ $colortext: #1b5ca1;
 }
 
 body{
-  font-family: Muller, sans-serif;
+  font-family: 'Muller', sans-serif;
   font-weight: normal;
   color: $maintext;
+  background-color: $whitecolor;
   word-wrap: break-word;
   overflow-x: hidden;
-  text-align: center;
+  text-align: left;
 }
 
 a,
@@ -45,7 +47,7 @@ li{
 }
 
 .wrapper{
-  max-width: 1162px;
+  max-width: 1171px;
   margin: 0 auto;
 }
 
@@ -58,12 +60,431 @@ li{
   text-transform: none;
   overflow: visible;
   border: none;
-}
-
-.btn:focus{
-  outline-style: none;
+  &:focus{
+    outline-style: none;
+  }
 }
 
 .btn--primary{
-  
+  padding: 12px 40px;
+  background-color: $primarycolor;
+  color: $whitecolor;
+  font-size: 1.125em;
+}
+
+.btn--secondary{
+  padding: 24px 70px;
+  background-color: $secondarycolor;
+  font-size: 1.5em;
+}
+
+.section-title{
+  font-size: 3.063em;
+  font-weight: bold;
+  color: $colortext;
+  & span{
+    color: $maintext;
+  }
+}
+
+.site-list{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.site-list__item a{
+  color: $whitecolor;
+  font-size: 1.125em;
+  margin: 0 30px;
+  transition: 0.1s;
+  &:hover{
+    border-bottom: 1px solid $whitecolor;
+  }
+}
+
+/*Header*/
+.page-header{
+  position: relative;
+  background-color: transparent;
+}
+
+.page-header__wrapper{
+  display: flex;
+  text-align: center;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.page-header__logo{
+  margin-left: 54px;
+}
+
+.logo__img--header{
+  width: 35px;
+  height: 25px;
+}
+
+.logo__text{
+  color: $whitecolor;
+  font-size: 2em;
+  margin-left: 3px;
+  text-transform: uppercase;
+}
+
+.page-header__registration{
+  margin: 30px 0;
+  margin-right: 54px;
+  font-size: 1.125em;
+}
+
+.registration__link{
+  color: $whitecolor;
+  margin-right: 50px;
+}
+
+/*Top section*/
+.top{
+  padding-top: 70px;
+  // padding-bottom: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: $whitecolor;
+}
+
+.top__background{
+  position: absolute;
+  z-index: -10;
+  top: 0;
+  left: 0;
+  max-width: 100vw;
+  width: 100%;
+  max-height: 110%;
+}
+
+.top__logo{
+  margin-bottom: 60px;
+}
+
+.logo__img--large{
+  width: 170px;
+  height: 124px;
+}
+
+.top__title{
+  font-size: 3.375em;
+  font-weight: bold;
+  text-align: center;
+  width: 85%;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+
+.top__text{
+  font-size: 1.5em;
+  margin-bottom: 40px;
+}
+
+.top__footer{
+  position: relative;
+  height: 350px;
+  width: 100%;
+}
+
+.top__img{
+  position: absolute;
+  bottom: 0;
+  right: -50px;
+  width: 510px;
+  height: 445px;
+}
+
+/*How it work*/
+.how-it-work__title{
+  margin-bottom: 100px;
+}
+
+.how-it-work__list{
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 50px;
+}
+
+.steps-list__item{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  height: 500px;
+  width: 355px;
+  padding: 20px 10px;
+  background-image: url('../image/funktioniert-bg.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.steps-list__value{
+  font-size: 1.875em;
+  font-weight: bold;
+  margin-top: 25px;
+  margin-bottom: 60px;
+}
+
+.steps-list__text{
+  width: 90%;
+  text-align: center;
+  font-size: 1.375em;
+  margin-bottom: 30px;
+}
+
+/*Advantages*/
+.advantages__title{
+  margin-top: 200px;
+}
+
+.advantages__list{
+  display: flex;
+  flex-direction: column;
+}
+
+.advantages__item{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+}
+
+.advantages__item:nth-child(2) .advantages__left{
+  order: 1;
+}
+
+.advantages__left{
+  width: 40%;
+}
+
+.advantages__right{
+  width: 60%;
+  position: relative;
+  height: 500px;
+}
+
+.advantages__text{
+  font-size: 1.5em;
+}
+
+.advantages__img{
+  position: absolute;
+  bottom: 0;
+}
+
+.advantages__img--right{
+  right: 50px;
+}
+
+.advantages__img--left{
+  left: 50px;
+}
+
+/*Reviews*/
+.reviews{
+  padding: 100px 0;
+}
+
+.reviews__title{
+  margin-bottom: 70px;
+}
+
+.slider{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.slider input[type="radio"]{
+  display: none;
+}
+
+.slider__controls{
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.slider__btn{
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  background-color: $whitecolor;
+  box-shadow: 0 0 20px $shadowcolor;
+  margin: 0 30px;
+  cursor: pointer;
+  position: relative;
+}
+
+#slider-btn-1:checked ~ .slider__controls label[for="slider-btn-1"],
+#slider-btn-2:checked ~ .slider__controls label[for="slider-btn-2"],
+#slider-btn-3:checked ~ .slider__controls label[for="slider-btn-3"]{
+  background-color: $primarycolor;
+  &::after{
+    content: '';
+    width: 220px;
+    height: 220px;
+    position: absolute;
+    top: -15px;
+    left: -15px;
+    border: 5px dashed $secondarycolor;
+    border-radius: 50%;
+  }
+}
+
+.slider__bubble{
+  margin-top: 70px;
+  padding: 60px 30px;
+  border-radius: 14px;
+  box-shadow: 0 0 20px $shadowcolor;
+  background-color: $whitecolor;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  width: 700px;
+  position: relative;
+  &::before{
+    content: '';
+    width: 50px;
+    height: 50px;
+    background-color: $whitecolor;
+    box-shadow: 3px -3px 5px rgba(0, 0, 0, 0.1);
+    position: absolute;
+    top: -43px;
+    left: 50%;
+    transform: rotate(-45deg) translate(-50%);
+  }
+}
+
+#slider-btn-1:checked ~ .slider__bubble::before{
+  left: 15%;
+}
+
+#slider-btn-3:checked ~ .slider__bubble::before{
+  left: 83%;
+}
+
+.slider__inner{
+  overflow: hidden;
+  height: 70px;
+}
+
+.slider__area{
+  width: 300%;
+  transition: transform 0.5s ease-in-out;
+}
+
+.slide__item{
+  width: 700px;
+  height: 100%;
+  float: left;
+  line-height: 1.5;
+  text-align: left;
+}
+
+#slider-btn-1:checked ~ .slider__bubble .slider__area{
+  transform: translateX(0);
+}
+
+#slider-btn-2:checked ~ .slider__bubble .slider__area{
+  transform: translateX(-700px);
+}
+
+#slider-btn-3:checked ~ .slider__bubble .slider__area{
+  transform: translateX(-1400px);
+}
+
+/*Mission*/
+.mission{
+  padding: 50px 0;
+  position: relative;
+}
+
+.mission__title{
+  margin-bottom: 60px;
+}
+
+.mission__text{
+  font-size: 1.5em;
+  width: 50%;
+  margin-bottom: 200px;
+}
+
+.mission__img{
+  position: absolute;
+  bottom: 30px;
+  right: 10%;
+}
+
+/*Footer*/
+.page-footer{
+  background-image: url('../image/footer-bg.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.page-footer__wrapper{
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+.page-footer__logo{
+  margin: 70px 0;
+  margin-left: 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo__img--footer{
+  width: 90px;
+  height: 65px;
+  margin-bottom: 15px;
+}
+
+.page-footer__nav{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  margin-left: 200px;
+  margin-top: 50px;
+}
+
+.page-footer__title{
+  margin: 30px;
+  margin-top: 0;
+  font-size: 1.625em;
+  color: $whitecolor;
+  font-weight: bold;
+}
+
+.page-footer__list{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+
+.site-list__item--vert{
+  margin-bottom: 15px;
 }
