--- a/styles/main.scss
+++ b/styles/main.scss
@@ -146,7 +146,6 @@ li{
 /*Top section*/
 .top{
   padding-top: 70px;
-  // padding-bottom: 400px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -159,9 +158,8 @@ li{
   z-index: -10;
   top: 0;
   left: 0;
-  max-width: 100vw;
   width: 100%;
-  max-height: 110%;
+  height: 100%;
 }
 
 .top__logo{
