--- a/styles/main.scss
+++ b/styles/main.scss
@@ -157,10 +157,14 @@ li{
   position: absolute;
   z-index: -10;
   top: 0;
-  left: 0;
+  left: 0px;
   width: 100%;
   height: 100%;
+  & .top__background-img{
+    transform: scale(1.1);
+  }
 }
+
 
 .top__logo{
   margin-bottom: 60px;
@@ -485,4 +489,10 @@ li{
 
 .site-list__item--vert{
   margin-bottom: 15px;
+}
+
+@media only screen and (max-width: 1600px){
+  .top__background{
+    width: 100%;
+  }
 }
